# rust-todo-app-introduction

./: Cargo.toml  compose.yml
migrations/: 20231001013503_init.sql
src/: handlers.rs  main.rs  repositories.rs
todos-api/: Cargo.toml  Taskfile.yml
todos-api/src/: handlers.rs  main.rs  repositories.rs
todos-front/: bun.lockb  package.json
todos-front/src/: App.tsx
todos-front/src/components/: TodoForm.tsx  TodoItem.tsx  TodoList.tsx
todos-front/src/lib/api/: todo.ts
todos-front/src/styles/: modal.ts
todos-front/src/types/: todo.d.ts
