[package]
name = "rust-todos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["macros"] }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.32.0", features = ["full"] }
tower = "0.4.13"
mime = "0.3.17"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
anyhow = "1.0.75"
thiserror = "1.0.49"
http-body = "0.4.5"
validator = { version = "0.16.1", features = ["derive"] }